--- a/TestNG-Examples/test-output/index.html
+++ b/TestNG-Examples/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>testng-customsuite.xml</span>
+                    <span>test_parameters.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">6 methods,   6 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,32 +102,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.journaldev.utils.TestUtils" class="method navigator-link" hash-for-method="test_add(2, 2)">test_add(2, 2)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.journaldev.parameters.TestParameters" class="method navigator-link" hash-for-method="multipleParameterTest(100, JournalDev)">multipleParameterTest(100, JournalDev)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.journaldev.utils.TestUtils" class="method navigator-link" hash-for-method="test_add(1, 1)">test_add(1, 1)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.journaldev.utils.TestUtils" class="method navigator-link" hash-for-method="test_setName(MyUtils)">test_setName(MyUtils)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.journaldev.utils.TestUtils" class="method navigator-link" hash-for-method="test_setName(Utils)">test_setName(Utils)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.journaldev.utils.TestUtils" class="method navigator-link" hash-for-method="test_subtract(2, 2)">test_subtract(2, 2)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.journaldev.utils.TestUtils" class="method navigator-link" hash-for-method="test_subtract(1, 1)">test_subtract(1, 1)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.journaldev.parameters.TestParameters" class="method navigator-link" hash-for-method="singleParameterTest(Pankaj)">singleParameterTest(Pankaj)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -145,55 +125,23 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.journaldev.utils.TestUtils</span>
+              <span class="class-name">com.journaldev.parameters.TestParameters</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="test_add(2, 2)">
-                  </a> <!-- test_add(2, 2) -->
-                  <span class="method-name">test_add</span>
-                  <span class="parameters">(2, 2)</span>
+                  <a name="multipleParameterTest(100, JournalDev)">
+                  </a> <!-- multipleParameterTest(100, JournalDev) -->
+                  <span class="method-name">multipleParameterTest</span>
+                  <span class="parameters">(100, JournalDev)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="test_add(1, 1)">
-                  </a> <!-- test_add(1, 1) -->
-                  <span class="method-name">test_add</span>
-                  <span class="parameters">(1, 1)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="test_setName(MyUtils)">
-                  </a> <!-- test_setName(MyUtils) -->
-                  <span class="method-name">test_setName</span>
-                  <span class="parameters">(MyUtils)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="test_setName(Utils)">
-                  </a> <!-- test_setName(Utils) -->
-                  <span class="method-name">test_setName</span>
-                  <span class="parameters">(Utils)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="test_subtract(2, 2)">
-                  </a> <!-- test_subtract(2, 2) -->
-                  <span class="method-name">test_subtract</span>
-                  <span class="parameters">(2, 2)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="test_subtract(1, 1)">
-                  </a> <!-- test_subtract(1, 1) -->
-                  <span class="method-name">test_subtract</span>
-                  <span class="parameters">(1, 1)</span>
+                  <a name="singleParameterTest(Pankaj)">
+                  </a> <!-- singleParameterTest(Pankaj) -->
+                  <span class="method-name">singleParameterTest</span>
+                  <span class="parameters">(Pankaj)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -201,16 +149,20 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/1t/sx2jbcl534z88byy78_36ykr0000gn/T/testng-eclipse--1635548632/testng-customsuite.xml</span>
+            <span class="header-content">/Users/pankaj/Documents/github/journaldev/TestNG-Examples/target/test-classes/test_parameters.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
+  &lt;parameter name=&quot;before_suite&quot; value=&quot;My Before Suite Parameter&quot;/&gt;
+  &lt;parameter name=&quot;id&quot; value=&quot;100&quot;/&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
+    &lt;parameter name=&quot;name&quot; value=&quot;JournalDev&quot;/&gt;
+    &lt;parameter name=&quot;arguments&quot; value=&quot;Pankaj&quot;/&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.journaldev.utils.TestUtils&quot;/&gt;
+      &lt;class name=&quot;com.journaldev.parameters.TestParameters&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -250,36 +202,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(6);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'test_add')
-data.setCell(0, 2, 'com.journaldev.utils.TestUtils')
-data.setCell(0, 3, 9);
+data.setCell(0, 1, 'multipleParameterTest')
+data.setCell(0, 2, 'com.journaldev.parameters.TestParameters')
+data.setCell(0, 3, 14);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'test_add')
-data.setCell(1, 2, 'com.journaldev.utils.TestUtils')
-data.setCell(1, 3, 2);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'test_subtract')
-data.setCell(2, 2, 'com.journaldev.utils.TestUtils')
-data.setCell(2, 3, 2);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'test_setName')
-data.setCell(3, 2, 'com.journaldev.utils.TestUtils')
-data.setCell(3, 3, 1);
-data.setCell(4, 0, 4)
-data.setCell(4, 1, 'test_setName')
-data.setCell(4, 2, 'com.journaldev.utils.TestUtils')
-data.setCell(4, 3, 1);
-data.setCell(5, 0, 5)
-data.setCell(5, 1, 'test_subtract')
-data.setCell(5, 2, 'com.journaldev.utils.TestUtils')
-data.setCell(5, 3, 1);
+data.setCell(1, 1, 'singleParameterTest')
+data.setCell(1, 2, 'com.journaldev.parameters.TestParameters')
+data.setCell(1, 3, 0);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 16 ms</span>
+              <span class="suite-total-time">Total running time: 14 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -305,31 +241,23 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.journaldev.utils.TestUtils</div> <!-- chronological-class-name -->
-              <div class="test-method">
-                <span class="method-name">test_add(1, 1)</span>
+              <div class="chronological-class-name">com.journaldev.parameters.TestParameters</div> <!-- chronological-class-name -->
+              <div class="configuration-suite before">
+                <span class="method-name">beforeSuite(My Before Suite Parameter)</span>
                 <span class="method-start">0 ms</span>
+              </div> <!-- configuration-suite before -->
+              <div class="test-method">
+                <span class="method-name">multipleParameterTest(100, JournalDev)</span>
+                <span class="method-start">31 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">test_add(2, 2)</span>
-                <span class="method-start">10 ms</span>
+                <span class="method-name">singleParameterTest(Pankaj)</span>
+                <span class="method-start">46 ms</span>
               </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">test_subtract(1, 1)</span>
-                <span class="method-start">14 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">test_subtract(2, 2)</span>
-                <span class="method-start">17 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">test_setName(Utils)</span>
-                <span class="method-start">20 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">test_setName(MyUtils)</span>
-                <span class="method-start">22 ms</span>
-              </div> <!-- test-method -->
+              <div class="configuration-suite after">
+                <span class="method-name">afterSuite(Default Parameter)</span>
+                <span class="method-start">107 ms</span>
+              </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
