--- a/TestNG-Examples/test-output/old/Default suite/methods-alphabetical.html
+++ b/TestNG-Examples/test-output/old/Default suite/methods-alphabetical.html
@@ -1,16 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7caf88">  <td>18/05/29 13:16:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestUtils.test_add(java.lang.Integer, java.lang.Integer)[pri:1, instance:com.journaldev.utils.TestUtils@399c4be1]">test_add</td> 
-  <td>main@2030036700</td>   <td></td> </tr>
-<tr bgcolor="7caf88">  <td>18/05/29 13:16:35</td>   <td>11</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestUtils.test_add(java.lang.Integer, java.lang.Integer)[pri:1, instance:com.journaldev.utils.TestUtils@399c4be1]">test_add</td> 
-  <td>main@2030036700</td>   <td></td> </tr>
-<tr bgcolor="7caf88">  <td>18/05/29 13:16:35</td>   <td>21</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestUtils.test_setName(java.lang.String)[pri:3, instance:com.journaldev.utils.TestUtils@399c4be1]">test_setName</td> 
-  <td>main@2030036700</td>   <td></td> </tr>
-<tr bgcolor="7caf88">  <td>18/05/29 13:16:35</td>   <td>23</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestUtils.test_setName(java.lang.String)[pri:3, instance:com.journaldev.utils.TestUtils@399c4be1]">test_setName</td> 
-  <td>main@2030036700</td>   <td></td> </tr>
-<tr bgcolor="7caf88">  <td>18/05/29 13:16:35</td>   <td>15</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestUtils.test_subtract(java.lang.Integer, java.lang.Integer)[pri:2, instance:com.journaldev.utils.TestUtils@399c4be1]">test_subtract</td> 
-  <td>main@2030036700</td>   <td></td> </tr>
-<tr bgcolor="7caf88">  <td>18/05/29 13:16:35</td>   <td>18</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestUtils.test_subtract(java.lang.Integer, java.lang.Integer)[pri:2, instance:com.journaldev.utils.TestUtils@399c4be1]">test_subtract</td> 
-  <td>main@2030036700</td>   <td></td> </tr>
+<tr bgcolor="e767f3">  <td>18/05/31 14:20:18</td>   <td>0</td> <td title="&lt;&lt;TestParameters.afterSuite(java.lang.String)[pri:0, instance:com.journaldev.parameters.TestParameters@30ee2816]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@384587033</td>   <td></td> </tr>
+<tr bgcolor="e767f3">  <td>18/05/31 14:20:18</td>   <td>-102</td> <td title="&gt;&gt;TestParameters.beforeSuite(java.lang.String)[pri:0, instance:com.journaldev.parameters.TestParameters@30ee2816]">&gt;&gt;beforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@384587033</td>   <td></td> </tr>
+<tr bgcolor="e767f3">  <td>18/05/31 14:20:18</td>   <td>-78</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestParameters.multipleParameterTest(int, java.lang.String)[pri:0, instance:com.journaldev.parameters.TestParameters@30ee2816]">multipleParameterTest</td> 
+  <td>main@384587033</td>   <td></td> </tr>
+<tr bgcolor="e767f3">  <td>18/05/31 14:20:18</td>   <td>-63</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestParameters.singleParameterTest(java.lang.String)[pri:0, instance:com.journaldev.parameters.TestParameters@30ee2816]">singleParameterTest</td> 
+  <td>main@384587033</td>   <td></td> </tr>
 </table>
